--- a/products.html
+++ b/products.html
@@ -40,26 +40,28 @@
     </div>
   </div>
   <div class="container-fluid">
-    <div class="row bg-black alert-dismissible py-5">
-      <div class="col-12 col-md-6 col-xl-6 text-warning text-center d-flex justify-content-center align-items-center py-5 ">
-        <div class="animate__animated animate__fadeInLeft roboto">
-          <h1>HYPER AUTO</h1>
-          <h4>Protection & Detailing,</h4>
-          <h4>Car Auto Accessories</h4>
+    <div class="row bg-black text-warning roboto">
+        <div class="col-12 col-lg-4 my-3">
+            <div>
+                <img src="asset/default.jpg" style="width:100%;">
+                <h5>Name</h5>
+                <h6>Test data</h6>
+            </div>
         </div>
-      </div>
-      <div class="col-12 col-md-6 col-xl-6" style="padding-left: 15%;">
-        <img src="asset/car.svg" class="animate__animated animate__fadeInRight">
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row bg-warning py-5">
-      <div class="col-12 text-center motto py-5 animate__animated animate__fadeInUp">
-        <h1>BETTER CARS,BETTER CARE</h1>
-        <h3>Dirty isn't a color!</h3>
-        <h4>We are offering the best service with the best products by the best professionals.</h4>
-      </div>
+        <div class="col-12 col-lg-4 my-3">
+            <div>
+                <img src="asset/default.jpg" style="width:100%;">
+                <h5>Name</h5>
+                <h6>Test data</h6>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4 my-3">
+            <div>
+                <img src="asset/default.jpg" style="width:100%;">
+                <h5>Name</h5>
+                <h6>Test data</h6>
+            </div>
+        </div>
     </div>
   </div>
 </body>
