updating product style

--- a/products.html
+++ b/products.html
@@ -41,25 +41,57 @@
   </div>
   <div class="container-fluid">
     <div class="row bg-black text-warning roboto">
-        <div class="col-12 col-lg-4 my-3">
+        <div class="col-12 col-md-6 col-lg-4 my-3">
             <div>
                 <img src="asset/default.jpg" style="width:100%;">
-                <h5>Name</h5>
-                <h6>Test data</h6>
+                <div class="p-4">
+                <h5 class="text-center">Name : BP-05(test)</h5>
+                  <div class="d-flex justify-content-between">
+                    <div>
+                      <h6>Thickness : 1.8 mil</h6>
+                      <h6>VLT(%) : 5%</h6>
+                      <h6>IRR(%) : 70%</h6>
+                    </div>
+                    <div>
+                      <h6>UVR(%) : 99%</h6>
+                      <h6>Durability : 3 years</h6>
+                      <h6>Series:Nano Film Series</h6>
+                    </div>
+                  </div> 
+              </div>
+              </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 my-3">
+            <div>
+                <img src="asset/default.jpg" style="width:100%;">
+                <div class="p-4">
+                  <h5 class="text-center">Name : BP-05(test)</h5>
+                    <div class="d-flex justify-content-between">
+                      <div>
+                        <h6>Thickness : 1.8 mil</h6>
+                        <h6>VLT(%) : 5%</h6>
+                        <h6>IRR(%) : 70%</h6>
+                      </div>
+                      <div>
+                        <h6>UVR(%) : 99%</h6>
+                        <h6>Durability : 3 years</h6>
+                        <h6>Series:Nano Film Series</h6>
+                      </div>
+                    </div> 
+                </div>
             </div>
         </div>
-        <div class="col-12 col-lg-4 my-3">
+        <div class="col-12 col-md-6 col-lg-4 my-3">
             <div>
                 <img src="asset/default.jpg" style="width:100%;">
-                <h5>Name</h5>
-                <h6>Test data</h6>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 my-3">
-            <div>
-                <img src="asset/default.jpg" style="width:100%;">
-                <h5>Name</h5>
-                <h6>Test data</h6>
+                <div class="p-4">
+                  <h5>Name</h5>
+                  <h6>THickness</h6>
+                  <h6>VLT(%)</h6>
+                  <h6>IRR(%)</h6>
+                  <h6>UVR(%)</h6>
+                  <h6>Durability</h6>
+                </div>
             </div>
         </div>
     </div>
