--- a/products.html
+++ b/products.html
@@ -45,57 +45,88 @@
             <div>
                 <img src="asset/default.jpg" style="width:100%;">
                 <div class="p-4">
-                <h5 class="text-center">Name : BP-05(test)</h5>
-                  <div class="d-flex justify-content-between">
-                    <div>
-                      <h6>Thickness : 1.8 mil</h6>
-                      <h6>VLT(%) : 5%</h6>
-                      <h6>IRR(%) : 70%</h6>
-                    </div>
-                    <div>
-                      <h6>UVR(%) : 99%</h6>
-                      <h6>Durability : 3 years</h6>
-                      <h6>Series:Nano Film Series</h6>
-                    </div>
-                  </div> 
-              </div>
-              </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 my-3">
-            <div>
-                <img src="asset/default.jpg" style="width:100%;">
-                <div class="p-4">
-                  <h5 class="text-center">Name : BP-05(test)</h5>
-                    <div class="d-flex justify-content-between">
-                      <div>
-                        <h6>Thickness : 1.8 mil</h6>
-                        <h6>VLT(%) : 5%</h6>
-                        <h6>IRR(%) : 70%</h6>
-                      </div>
-                      <div>
-                        <h6>UVR(%) : 99%</h6>
-                        <h6>Durability : 3 years</h6>
-                        <h6>Series:Nano Film Series</h6>
-                      </div>
-                    </div> 
+                  <h5 class="py-1">NAME :: BP-05</h5>
+                  <h6 class="py-1">THICKNESS :: 1.8 mil</h6>
+                  <h6 class="py-1">VLT(%) :: 5%</h6>
+                  <h6 class="py-1">IRR(%) :: 70% </h6>
+                  <h6 class="py-1">UVR(%) :: 99%</h6>
+                  <h6 class="py-1">DURABILITY :: 3years</h6>
+                  <h6 class="py-1">SERIES :: Nano Film Series</h6>
                 </div>
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4 my-3">
-            <div>
-                <img src="asset/default.jpg" style="width:100%;">
-                <div class="p-4">
-                  <h5>Name</h5>
-                  <h6>THickness</h6>
-                  <h6>VLT(%)</h6>
-                  <h6>IRR(%)</h6>
-                  <h6>UVR(%)</h6>
-                  <h6>Durability</h6>
-                </div>
+          <div>
+              <img src="asset/default.jpg" style="width:100%;">
+              <div class="p-4">
+                <h5 class="py-1">NAME :: BP-15</h5>
+                <h6 class="py-1">THICKNESS :: 1.8 mil</h6>
+                <h6 class="py-1">VLT(%) :: 15%</h6>
+                <h6 class="py-1">IRR(%) :: 60% </h6>
+                <h6 class="py-1">UVR(%) :: 96%</h6>
+                <h6 class="py-1">DURABILITY :: 3years</h6>
+                <h6 class="py-1">SERIES :: Nano Film Series</h6>
+              </div>
+          </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 my-3">
+        <div>
+            <img src="asset/default.jpg" style="width:100%;">
+            <div class="p-4">
+              <h5 class="py-1">NAME :: BP-35</h5>
+              <h6 class="py-1">THICKNESS :: 1.8 mil</h6>
+              <h6 class="py-1">VLT(%) :: 35%</h6>
+              <h6 class="py-1">IRR(%) :: 44% </h6>
+              <h6 class="py-1">UVR(%) :: 90%</h6>
+              <h6 class="py-1">DURABILITY :: 3years</h6>
+              <h6 class="py-1">SERIES :: Nano Film Series</h6>
             </div>
         </div>
     </div>
-  </div>
+    <div class="col-12 col-md-6 col-lg-4 my-3">
+      <div>
+          <img src="asset/default.jpg" style="width:100%;">
+          <div class="p-4">
+            <h5 class="py-1">NAME :: SEPN-05100</h5>
+            <h6 class="py-1">THICKNESS :: 3 mil</h6>
+            <h6 class="py-1">VLT(%) :: 5%</h6>
+            <h6 class="py-1">IRR(%) :: 98% </h6>
+            <h6 class="py-1">UVR(%) :: 100%</h6>
+            <h6 class="py-1">DURABILITY :: 10years</h6>
+            <h6 class="py-1">SERIES :: Safety and Highly Nano Ceramic Series</h6>
+          </div>
+      </div>
+   </div>
+   <div class="col-12 col-md-6 col-lg-4 my-3">
+    <div>
+        <img src="asset/default.jpg" style="width:100%;">
+        <div class="p-4">
+          <h5 class="py-1">NAME :: SEPN-15100</h5>
+          <h6 class="py-1">THICKNESS :: 3 mil</h6>
+          <h6 class="py-1">VLT(%) :: 15%</h6>
+          <h6 class="py-1">IRR(%) :: 97% </h6>
+          <h6 class="py-1">UVR(%) :: 100%</h6>
+          <h6 class="py-1">DURABILITY :: 10years</h6>
+          <h6 class="py-1">SERIES :: Safety and Highly Nano Ceramic Series</h6>
+        </div>
+    </div>
+   </div>
+   <div class="col-12 col-md-6 col-lg-4 my-3">
+  <div>
+      <img src="asset/default.jpg" style="width:100%;">
+      <div class="p-4">
+        <h5 class="py-1">NAME :: SEPN-30100</h5>
+        <h6 class="py-1">THICKNESS :: 3 mil</h6>
+        <h6 class="py-1">VLT(%) :: 30%</h6>
+        <h6 class="py-1">IRR(%) :: 96% </h6>
+        <h6 class="py-1">UVR(%) :: 99%</h6>
+        <h6 class="py-1">DURABILITY :: 10years</h6>
+        <h6 class="py-1">SERIES :: Safety and Highly Nano Ceramic Series</h6>
+      </div>
+   </div>
+   </div>
+ </div>
+</div>
 </body>
 <script src="js/bootstrap.js"></script>
 </html>
