updateing item name

--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
             <div>
                 <img src="asset/default.jpg" style="width:100%;">
                 <div class="p-4">
-                  <h5 class="py-1">NAME :: BP-05</h5>
+                  <h5 class="py-1">NAME :: HY-05</h5>
                   <h6 class="py-1">THICKNESS :: 1.8 mil</h6>
                   <h6 class="py-1">VLT(%) :: 5%</h6>
                   <h6 class="py-1">IRR(%) :: 70% </h6>
@@ -59,7 +59,7 @@
           <div>
               <img src="asset/default.jpg" style="width:100%;">
               <div class="p-4">
-                <h5 class="py-1">NAME :: BP-15</h5>
+                <h5 class="py-1">NAME :: HY-15</h5>
                 <h6 class="py-1">THICKNESS :: 1.8 mil</h6>
                 <h6 class="py-1">VLT(%) :: 15%</h6>
                 <h6 class="py-1">IRR(%) :: 60% </h6>
@@ -73,7 +73,7 @@
         <div>
             <img src="asset/default.jpg" style="width:100%;">
             <div class="p-4">
-              <h5 class="py-1">NAME :: BP-35</h5>
+              <h5 class="py-1">NAME :: HY-35</h5>
               <h6 class="py-1">THICKNESS :: 1.8 mil</h6>
               <h6 class="py-1">VLT(%) :: 35%</h6>
               <h6 class="py-1">IRR(%) :: 44% </h6>
@@ -87,7 +87,7 @@
       <div>
           <img src="asset/default.jpg" style="width:100%;">
           <div class="p-4">
-            <h5 class="py-1">NAME :: SEPN-05100</h5>
+            <h5 class="py-1">NAME :: HY-05100</h5>
             <h6 class="py-1">THICKNESS :: 3 mil</h6>
             <h6 class="py-1">VLT(%) :: 5%</h6>
             <h6 class="py-1">IRR(%) :: 98% </h6>
@@ -101,7 +101,7 @@
     <div>
         <img src="asset/default.jpg" style="width:100%;">
         <div class="p-4">
-          <h5 class="py-1">NAME :: SEPN-15100</h5>
+          <h5 class="py-1">NAME :: HY-15100</h5>
           <h6 class="py-1">THICKNESS :: 3 mil</h6>
           <h6 class="py-1">VLT(%) :: 15%</h6>
           <h6 class="py-1">IRR(%) :: 97% </h6>
@@ -115,7 +115,7 @@
   <div>
       <img src="asset/default.jpg" style="width:100%;">
       <div class="p-4">
-        <h5 class="py-1">NAME :: SEPN-30100</h5>
+        <h5 class="py-1">NAME :: HY-30100</h5>
         <h6 class="py-1">THICKNESS :: 3 mil</h6>
         <h6 class="py-1">VLT(%) :: 30%</h6>
         <h6 class="py-1">IRR(%) :: 96% </h6>
