--- a/products.html
+++ b/products.html
@@ -38,9 +38,17 @@
             </div>
           </nav>
     </div>
-  </div>
+  </div>  
   <div class="container-fluid">
     <div class="row bg-black text-warning roboto">
+
+      <div class="col-12 py-2 d-flex justify-content-center text-center">
+        <div>
+          <h2>WINDOW FILM PRODUCT</h2>
+          <a href="product-ppf.html" class="text-warning">Click here to check PAINT PROTECTION FILM PRODUCT</a>
+        </div>
+      </div>
+
         <div class="col-12 col-md-6 col-lg-4 my-3">
             <div>
                 <img src="asset/default.jpg" style="width:100%;">
