updating product data

--- a/hsl5.html
+++ b/hsl5.html
@@ -43,7 +43,7 @@
   <div class="container-fluid">
     <div class="row bg-black py-3 text-warning">
         <div class="col-12 d-flex justify-content-center">
-            <h5 style="font-weight:bolder">Products -> Paint Protection Film -> HP EM5</h5>
+            <h5 style="font-weight:bolder">Products -> Paint Protection Film -> HP HSL5</h5>
         </div>
     </div>
 
@@ -61,7 +61,7 @@
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                     <span class="px-4">GLOSS</span>
-                    <span class="px-4">94.4</span>
+                    <span class="px-4">94.6</span>
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                     <span class="px-4">SELF-HEALING COATING</span>
@@ -73,27 +73,27 @@
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                   <span class="px-4">ELONGATION AT BREAK</span>
-                  <span class="px-4">>= 300%</span>
+                  <span class="px-4">>= 350%</span>
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
-                  <span class="px-4">100% MODULUS</span>
-                  <span class="px-4">9.14 Mpa</span>
+                    <span class="px-4">100% MODULUS</span>
+                    <span class="px-4">8.7 Mpa</span>
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                   <span class="px-4">TENSILE STRENGTH</span>
-                  <span class="px-4">23.66 Mpa</span>
+                  <span class="px-4">22.6 Mpa</span>
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                     <span class="px-4">TEAR STRANGTH</span>
-                    <span class="px-4">85.1 kN/M</span>
-                  </div>
+                    <span class="px-4">90.9 kN/M</span>
+                </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                   <span class="px-4">PEELING FORCE OF ACRYLIC ADHESIVE LAYER/20MIN</span>
-                  <span class="px-4">1262 gf/inch</span>
+                  <span class="px-4">1273 gf/inch</span>
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                   <span class="px-4">PEELING FORCE OF ACRYLIC ADHESIVE LAYER/24 HOUR</span>
-                  <span class="px-4">2485 gf/inch</span>
+                  <span class="px-4">2128 gf/inch</span>
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                   <span class="px-4">ANTI YELLOWING</span>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="p-1 my-2 rounded d-flex justify-content-between align-items-center bg-black text-warning" style="border:0.5px solid var(--bs-warning)">
                   <span class="px-4">Durability</span>
-                  <span class="px-4">3 years</span>
+                  <span class="px-4">5 years</span>
                 </div>
             </div>
         </div>
