--- a/product-ppf.html
+++ b/product-ppf.html
@@ -69,7 +69,7 @@
               <h5>Name :: HP SERIES HSL5</h5>
               <h6>Price :: --- MMK</h6>
               <div class="d-flex justify-content-center align-items-center">
-                <a href="#" style="text-decoration: none;"><button class="btn btn-outline-warning d-flex">More Details</button></a>
+                <a href="hsl5.html" style="text-decoration: none;"><button class="btn btn-outline-warning d-flex">More Details</button></a>
               </div>
             </div>
         </div>
