--- a/service.html
+++ b/service.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="feather-icons-web/feather.css">
   
 </head>
 <body>
@@ -40,26 +41,56 @@
     </div>
   </div>
   <div class="container-fluid">
-    <div class="row bg-black alert-dismissible py-5">
-      <div class="col-12 col-md-6 col-xl-6 text-warning text-center d-flex justify-content-center align-items-center py-5 ">
-        <div class="animate__animated animate__fadeInLeft roboto">
-          <h1>HYPER AUTO</h1>
-          <h4>Protection & Detailing,</h4>
-          <h4>Car Auto Accessories</h4>
+    <div class="row bg-black py-5">
+        <div class="col-12 col-md-5 my-3">
+            <div class="card shadow bg-warning p-5">
+                <div class="card-body" style="border:0.5px solid black;border-radius:0.5rem">
+                    <div class="text-center">
+                        <h3>
+                            <i class="feather-droplet"></i> Our Services <i class="feather-droplet"></i>
+                        </h3>
+                        <hr>
+                        <span class="fw-bolder">If you’ve got the time, we’ve got the shine!</span>
+                        <hr>
+                        <span>Hyper Auto is the place where you can get best service with best quality.</span>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-12 col-md-6 col-xl-6" style="padding-left: 15%;">
-        <img src="asset/car.svg" class="animate__animated animate__fadeInRight">
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row bg-warning py-5">
-      <div class="col-12 text-center motto py-5 animate__animated animate__fadeInUp">
-        <h1>BETTER CARS,BETTER CARE</h1>
-        <h3>Dirty isn't a color!</h3>
-        <h4>We are offering the best service with the best products by the best professionals.</h4>
-      </div>
+
+        <div class="col-12 col-md-7 my-3">
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <div class="card my-3">
+                        <div class="card-body">
+                            <div class="p-5">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <div class="card my-3">
+                        <div class="card-body">
+                            <div class="p-5">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <div class="card my-3">
+                        <div class="card-body">
+                            <div class="p-5">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
   </div>
 </body>
