--- a/hsl5.html
+++ b/hsl5.html
@@ -25,7 +25,7 @@
                     <a class="nav-link text-uppercase px-5" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-uppercase px-5" aria-current="page" href="#">Services</a>
+                    <a class="nav-link text-uppercase px-5" aria-current="page" href="service.html">Services</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-uppercase px-5" aria-current="page" href="products.html">Products</a>
@@ -130,7 +130,7 @@
     <div class="row bg-black py-2">
         <div class="col-12 d-flex justify-content-center">
             <div>
-                <a href="product-ppf.html"><button class="btn btn-outline-danger">Back</button></a>
+                <a href="product-ppf.html"><button class="btn btn-warning">Back</button></a>
             </div>
         </div>
     </div>
