--- a/product-ppf.html
+++ b/product-ppf.html
@@ -25,7 +25,7 @@
                     <a class="nav-link text-uppercase px-5" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-uppercase px-5" aria-current="page" href="#">Services</a>
+                    <a class="nav-link text-uppercase px-5" aria-current="page" href="service.html">Services</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-uppercase px-5" aria-current="page" href="products.html">Products</a>
