adding contact us and about us page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="feather-icons-web/feather.css">
   
 </head>
 <body>
@@ -31,7 +32,7 @@
                     <a class="nav-link text-uppercase px-5" aria-current="page" href="products.html">Products</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-uppercase px-5" aria-current="page" href="#">About Us</a>
+                    <a class="nav-link text-uppercase px-5" aria-current="page" href="aboutUs.html">About Us</a>
                   </li>
                 </ul>
               </div>
@@ -59,6 +60,44 @@
         <h1>BETTER CARS,BETTER CARE</h1>
         <h3>Dirty isn't a color!</h3>
         <h4>We are offering the best service with the best products by the best professionals.</h4>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-black roboto text-warning">
+    <div class="row">
+      <div class="col-12">
+          <div class="card bg-black py-4 mx-4">
+            <div class="card-body text-center">
+              <h1 class="my-5">Contact Us</h1>
+              <span>We are located at MaNawHaRi Street,corner of 72,ChanMyaTharZi Township,Mandalay,Myanmar.</span>
+              <iframe class="my-5 d-none d-md-inline" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d745.7475393561692!2d96.09473682914401!3d21.933468243128196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3daac0f3e31f3b7b!2zMjHCsDU2JzAwLjUiTiA5NsKwMDUnNDMuMCJF!5e1!3m2!1sen!2smm!4v1660573230257!5m2!1sen!2smm" width="700" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe class="my-5 d-inline d-md-none" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d745.7475393561692!2d96.09473682914401!3d21.933468243128196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3daac0f3e31f3b7b!2zMjHCsDU2JzAwLjUiTiA5NsKwMDUnNDMuMCJF!5e1!3m2!1sen!2smm!4v1660573230257!5m2!1sen!2smm" width="300" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="row py-3">
+      <div class="col-md-3">
+
+      </div>
+      <div class="col-6 col-md-3">
+        <div class="card bg-black text-center">
+          <div class="card-body border">
+            <h4>Call Us</h4>
+            <a href="tel:+959440047441" style="text-decoration:none;color:var(--bs-warning)">09440047441</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-md-3">
+        <div class="card bg-black text-center">
+          <div class="card-body border">
+            <h4><i class="feather-facebook"></i></h4>
+            <a href="https://www.facebook.com/HYPER-Auto-Protection-Detailing-Car-Auto-Accessories-104928098632729" style="text-decoration:none;color:var(--bs-warning)">Hyper Auto</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+
       </div>
     </div>
   </div>
