--- a/aboutUs.html
+++ b/aboutUs.html
@@ -38,45 +38,31 @@
             </div>
           </nav>
     </div>
-  </div>  
-  <div class="container-fluid">
-    <div class="row bg-black text-warning roboto">
-
-      <div class="col-12 py-2 d-flex justify-content-center text-center">
-        <div>
-          <h2>PAINT PROTECTION FILM PRODUCT</h2>
-          <a href="products.html" class="text-warning">Click here to check WINDOW FILM PRODUCT</a>
-        </div>
-      </div>
-        
-      <div class="col-12 col-md-6 col-lg-4 my-3">
-          <div>
-              <img src="asset/default.jpg" style="width:100%;">
-              <div class="p-4">
-                <h5>Name :: HP SERIES EM5</h5>
-                <h6>Price :: --- MMK</h6>
-                <div class="d-flex justify-content-center align-items-center">
-                  <a href="em5.html" style="text-decoration: none;"><button class="btn btn-outline-warning d-flex">More Details</button></a>
+  </div>
+  <div class="container-fluid roboto bg-black text-warning">
+    <div class="row">
+        <div class="col-12">
+            <div class="card bg-black py-3 mx-4">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-12 col-md-6">
+                      <h1>About Us</h1>
+                      <img src="asset/car-wash.jpg" class="w-100 py-3">
+                    </div>
+                    <div class="col-12 col-md-6 text-center">
+                      <h3 class="my-5">Our first priority is to satisfy you.</h3>
+                      <span>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti facere libero eius reprehenderit deserunt asperiores praesentium est similique obcaecati velit dolorum ab soluta nam commodi sapiente, tempora placeat doloribus porro?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos perferendis reiciendis quaerat! Debitis iusto eius blanditiis aperiam et, sunt mollitia, iure nemo dicta libero corporis dolores deserunt molestias! Voluptas, magnam?
+                      </span>
+                    </div>
+                  </div>
                 </div>
-              </div>
-          </div>
-      </div>
-
-      <div class="col-12 col-md-6 col-lg-4 my-3">
-        <div>
-            <img src="asset/default.jpg" style="width:100%;">
-            <div class="p-4">
-              <h5>Name :: HP SERIES HSL5</h5>
-              <h6>Price :: --- MMK</h6>
-              <div class="d-flex justify-content-center align-items-center">
-                <a href="hsl5.html" style="text-decoration: none;"><button class="btn btn-outline-warning d-flex">More Details</button></a>
-              </div>
             </div>
+            
         </div>
     </div>
-
- </div>
-</div>
+  </div>
 </body>
 <script src="js/bootstrap.js"></script>
 </html>
