--- a/hsl5.html
+++ b/hsl5.html
@@ -31,7 +31,7 @@
                     <a class="nav-link text-uppercase px-5" aria-current="page" href="products.html">Products</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-uppercase px-5" aria-current="page" href="#">About Us</a>
+                    <a class="nav-link text-uppercase px-5" aria-current="page" href="aboutUs.html">About Us</a>
                   </li>
                 </ul>
               </div>
